--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <noscript>
-    JavaScriptを有効にしてください。
+    JavaScriptを有効にしてください
   </noscript>
   <div id="root"></div>
 <script src="/bundle.js"></script></body>
