--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@
     JavaScriptを有効にしてください
   </noscript>
   <div id="root"></div>
-<script src="/bundle.js"></script></body>
+<script src="bundle.js"></script></body>
 </html>
