--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
   <noscript>
-    JavaScriptを有効にしてください
+    JavaScriptを有効にしてください。
   </noscript>
   <div id="root"></div>
-<script src="bundle.js"></script></body>
+<script src="/bundle.js?a3ef5d1b6d2967b02826"></script></body>
 </html>
